# hotspot_analysis

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  zeabur.json
backend/: .env.example  .env.production  Dockerfile  Dockerfile.prod  ZEABUR_DEPLOY.md  alembic.ini  check_server.py  create_demo_data.py  find_unanalyzed.py  login_response.json  pyproject.toml  query_api_keys.py  query_data.py  requirements.txt  test_analysis.py  test_api_analysis.py  test_batch_analysis.py  test_collection_api.py  test_collection_service.py  test_import.py  test_mock.py  test_mock2.py  test_post_analysis.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/endpoints/: __init__.py  analysis.py  api_usage.py  auth.py  collection.py  health.py  hotspots.py  model_config.py  payment.py  ws.py  (+3 more)
backend/src/app/core/: ai_analysis.py  cache.py  cache_utils.py  config.py  database.py  llm.py
backend/src/app/models/: __init__.py  api_usage.py  hotspot.py  model_config.py  payment.py  subscription.py  user.py  user_action.py
backend/src/app/schemas/: __init__.py  api_usage.py  base.py  hotspot.py  user.py
backend/src/app/services/: base_collector.py  collector_service.py  hotspot_service.py  notification_service.py  progress_tracker.py  scheduler_service.py  search_collector.py  social_collector.py  ws_manager.py
backend/src/app/tasks/: analysis_tasks.py  celery_app.py  collection_tasks.py
backend/tests/: conftest.py  test_cache.py  test_hotspot_service.py
(+53 files in other folders)
